[package]
description = "This project has been renamed to `public-api`, see https://github.com/Enselic/public-api"
documentation = "https://github.com/Enselic/public-api/tree/public_items"
edition = "2021"
homepage = "https://github.com/Enselic/public-api/tree/public_items"
license = "MIT"
name = "public_items"
repository = "https://github.com/Enselic/public-api"
version = "0.9.1"
